tests/scan/fixtures/validation/negative/clean_go_clean-metrics-exporter/clean-metrics-exporter.go
// Package clean-metrics-exporter is a clean Go module.
package clean-metrics-exporter

func Hello() string { return "hello" }
